--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Home</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="layers.css">
     <link rel="icon" type="favicon"
         href="C:\HP_Backup\Windows_Backup\D_drive\Softwares\HTML-CSS-JS\Code\earth\images\favicon.ico">
 </head>
@@ -18,6 +19,12 @@
         <span class="white">Earth-</span><span class="blue">MyHome</span>
     </h1>
 
+    <nav>
+      <a href="layers.html" target="_blank">Layers</a>
+      <a href="" target="_blank">Continet</a>
+      <a href="" target="_blank">Climate</a>
+      <a href="" target="_blank">Places</a>
+    </nav>
 
 
     <div id="second">
