--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Earth - MyHome</title>
-  <link rel="stylesheet" href="home1.css" />
+  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="layers.css">
 
 </head>
 <body>
