--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
                 </div>
                     <div>
                          <button>
-                            <a href="#">Climates</a>
+                            <a href="#">Layers</a>
                         </button>
                         <button>
                             <a href="#">Continents</a>
