--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <nav>
       <a href="layers.html" target="_blank">Layers</a>
-      <a href="" target="_blank">Continet</a>
-      <a href="" target="_blank">Climate</a>
+      <a href="" target="_blank">Continents</a>
       <a href="" target="_blank">Places</a>
     </nav>
   <h1 class="heading"><span class="white">Earth - </span><span class="blue">MyHome</span></h1>
