--- a/layers.html
+++ b/layers.html
@@ -4,6 +4,26 @@
         <link rel="stylesheet" href="layers.css">
     </head>
     <body>
+        <header>
+            <div  id="header">
+                <div id="logo">
+                    <img src="logo.png" width="100px" height="100px" >
+                </div>
+                    <div>
+                         <button>
+                            <a href="layers.html">Layers</a>
+                        </button>
+                        <button>
+                            <a href="#">Continents</a>
+                        </button>
+                        <button>
+                            <a href="evaluation.html.html">Evolution</a>
+                        </button>
+
+                    </div>
+                </div>
+        </header>
+
         <center>
             <h1>Layers inside the earth</h1>
             <div>
@@ -92,6 +112,12 @@
             </div>
             <br><br><br>
         </div>
-        
+
+        <footer>
+        © 2025 Earth-MyHome | Designed with
+        <img src="heart.png" width="25">
+        Group-28
+        </footer>
+
     </body>
 </html>
