--- a/layers.html
+++ b/layers.html
@@ -115,7 +115,7 @@
 
         <footer>
         © 2025 Earth-MyHome | Designed with
-        <img src="heart.png" width="25">
+        <img src="heart.jpg" width="25">
         Group-28
         </footer>
 
