--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
 
 </head>
 <body>
-    <nav>
-      <a href="layers.html" target="_blank">Layers</a>
-      <a href="" target="_blank">Continents</a>
-      <a href="evolution.html" target="_blank">Evolution</a>
-    </nav>
+     <header>
+            <div  id="header">
+                <div id="logo">
+                    <img src="logo-removebg-preview(1).png" width="100px" height="100px" >
+                </div>
+                    <div>
+                         <button>
+                            <a href="layers.html">Layers</a>
+                        </button>
+                        <button>
+                            <a href="#">Continents</a>
+                        </button>
+                        <button>
+                            <a href="evaluation.html.html">Evolution</a>
+                        </button>
+
+                    </div>
+                </div>
+        </header>
   <h1 class="heading"><span class="white">Earth - </span><span class="blue">MyHome</span></h1>
 
   <div class="section-title">
