--- a/index.html
+++ b/index.html
@@ -10,24 +10,14 @@
 </head>
 <body>
      <header>
-            <div  id="header">
-                <div id="logo">
-                    <img src="logo-removebg-preview(1).png" width="100px" height="100px" >
-                </div>
-                    <div>
-                         <button>
-                            <a href="layers.html">Layers</a>
-                        </button>
-                        <button>
-                            <a href="#">Continents</a>
-                        </button>
-                        <button>
-                            <a href="evaluation.html.html">Evolution</a>
-                        </button>
-
-                    </div>
-                </div>
-        </header>
+        <nav>
+      <a href="index.html" target="_blank">Home</a>
+      <a href="layers.html" target="_blank">Layers</a>
+      <a href="evalution.html" target="_blank">Evalution</a>
+      <a href="continent.html" target="_blank">Continent</a>
+    </nav>
+     </header>
+            
   <h1 class="heading"><span class="white">Earth - </span><span class="blue">MyHome</span></h1>
 
   <div class="section-title">
