--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
     <div class="card"><div class="emoji">🌫️</div><h3>Air Pollution</h3></div>
     <div class="card"><div class="emoji">🏭</div><h3>Industrial Waste</h3></div>
   </div>
-
+<footer>
+        © 2025 Earth-MyHome | Designed with
+        <img src="heart.jpg" width="25">
+        Group-28
+        </footer>
 </body>
 </html>
