--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="index.html" target="_blank">Home</a>
       <a href="layers.html" target="_blank">Layers</a>
       <a href="evalution.html" target="_blank">Evalution</a>
-      <a href="continent.html" target="_blank">Continent</a>
+      <a href="continents.html" target="_blank">Continents</a>
     </nav>
      </header>
             
