--- a/layers.html
+++ b/layers.html
@@ -17,7 +17,7 @@
                             <a href="#">Continents</a>
                         </button>
                         <button>
-                            <a href="evaluation.html.html">Evolution</a>
+                            <a href="evalution.html">Evolution</a>
                         </button>
 
                     </div>
