--- a/layers.html
+++ b/layers.html
@@ -10,6 +10,9 @@
                     <img src="logo-removebg-preview (1).png" width="100px" height="100px" >
                 </div>
                     <div>
+                        <button>
+                            <a href="index.html">Home</a>
+                        </button>
                          <button>
                             <a href="layers.html">Layers</a>
                         </button>
