--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Earth - MyHome</title>
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="layers.css">
+  <link rel="icon" href="favicon.ico">
 
 </head>
 <body>
